# Search-Engine

./: README.md
Skillbox_Search_Engine/: CMakeLists.txt  Skillbox_Search_Engine.cpp  Skillbox_Search_Engine.h  configuration.h
Skillbox_Search_Engine/JSON/: answers.json  config.json  requests.json
Skillbox_Search_Engine/JSON/Resources/: file001.txt  file002.txt  file003.txt  file004.txt  file005.txt
Skillbox_Search_Engine/Tests/: CMakeLists.txt  test_search.cpp  test_search.h
Skillbox_Search_Engine/include/: ConverterJSON.h  InvertedIndex.h  SearchServer.h
Skillbox_Search_Engine/src/: ConverterJSON.cpp  InvertedIndex.cpp  SearchServer.cpp
